--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -58,6 +58,10 @@
         <activity
             android:name=".ui.activity.MainActivity"
             android:screenOrientation="portrait" />
+
+        <activity
+            android:name=".ui.activity.xs.XsContentActivity"
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
