--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -65,6 +65,14 @@
         <activity
             android:name="com.zwj.supertools.ui.activity.xs.XsContentListActivity"
             android:screenOrientation="portrait" />
+
+        <activity
+            android:name="com.zwj.supertools.ui.activity.name.NameActivity"
+            android:screenOrientation="portrait" />
+
+        <activity
+            android:name="com.zwj.supertools.ui.activity.name.PersonNameActivity"
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
