--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -77,6 +77,10 @@
         <activity
             android:name="com.zwj.supertools.ui.activity.fund.CurFundInfoListActivity"
             android:screenOrientation="portrait" />
+
+        <activity
+            android:name="com.zwj.supertools.ui.activity.fperson.FPersonBirthdayListActivity"
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
