--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'org.greenrobot.greendao'
 
 android {
     compileSdkVersion rootProject.ext.compileSdkVersion
-    buildToolsVersion rootProject.ext.buildToolsVersion
+//    buildToolsVersion rootProject.ext.buildToolsVersion
     defaultConfig {
         applicationId rootProject.ext.applicationId
         minSdkVersion rootProject.ext.minSdkVersion
@@ -67,7 +67,7 @@ dependencies {
 
     compile project(':PushSDK')
 
-    compile 'com.github.a404318964.ZhuangwjUtils:customview:1.3.22'
+    compile 'com.github.a404318964.ZhuangwjUtils:customview:1.3.40'
 //
 //    // 内存泄露检测
     debugCompile 'com.squareup.leakcanary:leakcanary-android:1.5.4'
@@ -77,7 +77,8 @@ dependencies {
 //    compile 'com.jaeger.statusbarutil:library:1.4.0'
 
     // 友盟
-    compile 'com.umeng.analytics:analytics:latest.integration'
+    compile 'com.umeng.sdk:common:latest.integration'
+    compile 'com.umeng.sdk:analytics:latest.integration'
 //    compile 'com.daimajia.numberprogressbar:library:1.2@aar'
 
     compile 'org.greenrobot:greendao:3.2.2'
